# ai-apps-v2

./: LICENSE  README.md
rag-chatbot-app/: .env.example  .gitignore  LICENSE  README.md  app.py  config.yaml  mcp_client.py  pyproject.toml  requirements-finetune.txt  requirements-prod.txt  requirements.txt
rag-chatbot-app/api/: __init__.py  audit.py  auth.py  monitoring.py  server.py
rag-chatbot-app/data/documents/: company_policy.txt  technical_documentation.txt
rag-chatbot-app/docs/: ARCHITECTURE.md  COMPLETE_GUIDE.md  HARDWARE_REQUIREMENTS.md  LESSON_PLAN.md  NOTES.md  PRODUCTION_ARCHITECTURE.md  Project_Reference.md  QA.md  README.md  SECURITY.md  TEACHER_NOTES.md  TRAINING_DATA_GUIDE.md
rag-chatbot-app/evaluation/: __init__.py  feedback.py  rag_monitor.py
rag-chatbot-app/generation/: __init__.py  prompts.py
rag-chatbot-app/guardrails/: __init__.py  content_safety.py  model_governance.py
rag-chatbot-app/memory/: __init__.py  memory_bank.py
rag-chatbot-app/notebooks/: colab_finetune.ipynb
rag-chatbot-app/notebooks/lessons/: 01_basic_chat.py  02_embeddings.py  03_ingest_documents.py  04_rag_chatbot.py  05_evaluation.py  06_huggingface.py  07_memory_bank.py  08_prompt_engineering.py  09_guardrails.py  10_pii_detection.py  11_input_sanitization.py  12_hybrid_search.py  13_streaming.py  14_fine_tuning.py  15_human_feedback.py  16_rag_monitoring.py  17_api_and_auth.py  18_configuration.py
rag-chatbot-app/retrieval/: __init__.py  hybrid.py
rag-chatbot-app/scripts/: finetune.py  training_validator.py
rag-chatbot-app/src/: __init__.py  chatbot.py  config.py
